<?xml version="1.0" encoding="utf-8"?>
<!--Root needs to be a FrameLayout so the insets are handled automatically-->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/translation_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    style="@style/Widget.Material3.BottomSheet"
    app:backgroundTint="?colorSurfaceContainerHigh"
    app:behavior_hideable="true"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        android:paddingTop="16dp">

        <ImageButton
            android:id="@+id/more_info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/more_information"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?colorOnSurface"
            app:srcCompat="@drawable/ic_outline_info_24"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/add_note_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_note_placeholder"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/more_info_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_note_add_24"
            app:tint="?colorOnSurface"
            tools:visibility="visible" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/translated_text_scroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/notes_text"
            app:layout_constraintEnd_toStartOf="@+id/add_note_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHeight_max="80dp"
            app:layout_goneMarginEnd="16dp">

            <TextView
                android:id="@+id/translated_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                tools:text="A secondary color provides more ways to accent and distinguish your product. Having a secondary color is optional." />
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/notes_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/word_translation"
            app:layout_constraintEnd_toEndOf="@+id/translated_text_scroll"
            app:layout_constraintStart_toStartOf="@+id/translated_text_scroll"
            app:layout_constraintTop_toBottomOf="@+id/translated_text_scroll"
            tools:text="Saved notes text"
            tools:visibility="visible" />

        <View
            android:id="@+id/top_border_word_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?colorOnSurface"
            android:layout_marginHorizontal="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/word_translation"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/word_translation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:lines="1"
            android:paddingVertical="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_word_note_btn"
            app:layout_constraintStart_toStartOf="@+id/translated_text_scroll"
            app:layout_constraintTop_toBottomOf="@id/notes_text"
            tools:text="Word translation"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/add_word_note_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/add_note_for_word"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/more_info_word_btn"
            app:layout_constraintTop_toBottomOf="@+id/top_border_word_view"
            app:tint="?colorOnSurface"
            app:srcCompat="@drawable/baseline_note_add_24"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/more_info_word_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/more_information_word"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_border_word_view"
            app:tint="?colorOnSurface"
            app:srcCompat="@drawable/ic_outline_info_24"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/bar_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
