...
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/paragraph" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_paragraph"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/expand"
            app:icon="@drawable/ic_baseline_close_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="?colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/translated_paragraph" />

        <TextView
            android:id="@+id/translated_paragraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
...
