...

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/paragraphs_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:contentDescription="@string/paragraphs_list"
            android:paddingBottom="@dimen/web_reader_bar_height"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
                android:id="@+id/sheet_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />

            <WebView
                android:id="@+id/info_webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/sheet_handle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/links_list"
...
